# ROS_maskrcnn_openvino

./: .clang-format  .gitignore  CMakeLists.txt  package.xml
include/openvino_maskrcnn_inference/: ocv_common.hpp
maksrcnn_mo/: frozen_inference_graph.mapping  frozen_inference_graph.xml
src/: main.cpp
